[package]
name = "zygisk-rust-dex-unpacker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.15.1"
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"]}
crc = "3.3.0"
jni = "0.21.1"
jni-sys = "0.4.0"
lazy_static = "1.5.0"
libc = "0.2.177"
log = "0.4.28"
nix = { version = "0.30.1", features = ["fs", "process"] }
proc-maps = "0.4.0"
zygisk-rs = { git = "https://github.com/qweraqq/zygisk-rs.git", default-features = false, features = ["v4"] }
